<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">Yhvpwl4G1DeowXywN7wv8cl5rv43NFzPtZfRxs4s</string>
    <string name="parse_client_key">LjTPO2ZQhitGL8rmZfZ0Lv4oKQEnvi9PbVAozP3M</string>

    <string name="app_name">Dorm Weekend Activities - Admin</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="AddActivity">Add a New Activity</string>
    <string name="activity_title">Activity Title</string>
    <string name="activity_description">Activity Description</string>
    <string name="max_participants">Maximum Participants</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="save_activity">Save Activity</string>
    <string name="ViewActivities">View Activity List</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="namelabel">Name: </string>
</resources>
